# qsharp

./: Cargo.toml  TODO.md
compiler/qsc/: Cargo.toml
compiler/qsc/src/: interpret.rs  lib.rs
compiler/qsc/src/interpret/: circuit_tests.rs
compiler/qsc_ast/src/: ast.rs  mut_visit.rs  visit.rs
compiler/qsc_circuit/: Cargo.toml
compiler/qsc_circuit/src/: builder.rs  circuit.rs  lib.rs  operations.rs
compiler/qsc_codegen/src/: qir.rs
compiler/qsc_data_structures/: Cargo.toml
compiler/qsc_data_structures/src/: index_map.rs
compiler/qsc_doc_gen/src/: display.rs
compiler/qsc_eval/src/: lib.rs
compiler/qsc_frontend/src/: resolve.rs
compiler/qsc_parse/src/: item.rs  prim.rs
compiler/qsc_passes/src/: capabilitiesck.rs  lib.rs
compiler/qsc_rir/src/: rir.rs
language_service/: Cargo.toml
language_service/src/: code_lens.rs  compilation.rs  protocol.rs
language_service/src/code_lens/: tests.rs
npm/src/compiler/: compiler.ts  events.ts  worker-browser.ts
npm/src/debug-service/: debug-service.ts  worker-proxy.ts
npm/src/workers/: common.ts
npm/ux/: circuitPanel.tsx
pip/qsharp/: _native.pyi  _qsharp.py
pip/src/: circuit.rs  interpreter.rs  lib.rs
samples/: samples.mjs
samples/algorithms/: Adaptive.qs  Quantinuum.qs
samples/circuit_samples/: qiskit.ipynb  quantum_viz_sample.ipynb  sample.ipynb
vscode/src/: circuit.ts  codeLens.ts  webviewPanel.ts
vscode/src/debugger/: session.ts
vscode/src/webview/: webview.tsx
wasm/src/: debug_service.rs  diagnostic.rs  language_service.rs  lib.rs  logging.rs
(+7 files in other folders)
