[package]
name = "qsls"

version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dev-dependencies]
expect-test = { workspace = true }
indoc = { workspace = true }
tokio = { workspace = true }

[dependencies]
futures = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
miette = { workspace = true }
qsc = { path = "../compiler/qsc" }
rustc-hash = { workspace = true }
qsc_eval = { path = "../compiler/qsc_eval" }
qsc_passes = { path = "../compiler/qsc_passes" }
qsc_project = { path = "../compiler/qsc_project", features = ["async"] }
qsc_rca = { path = "../compiler/qsc_rca" }
async-trait = { workspace = true }

[lints]
workspace = true

[lib]
doctest = false
